--- a/src/views/libro-mayor-ctas.ejs
+++ b/src/views/libro-mayor-ctas.ejs
@@ -1,12 +1,5 @@
 <% include partials/_header %>
 
-<pre>
-        <%= lmayor %>
-</pre>
-
-<pre>
-        <%= count_name %>
-</pre>
 <table border="1">
     <thead>
         <tr>
@@ -21,67 +14,61 @@
     <tbody>
 <% let saldoSum = 0 %>
         <% for(var i=0; i < lmayor.length; i++) { %>
-            
-         <% for(var j=0; j < lmayor[i].cuenta.length; j++) { %>
+            <% for(var j=0; j < lmayor[i].cuenta.length; j++) { %>
             <tr>
-            <%if(lmayor[i].cuenta[j].nombre==count_name){%>
-            <td><%= lmayor[i].numero_asiento %></td>
-            <td><strong><%=  lmayor[i].fecha.getDate() + '/'+(lmayor[i].fecha.getMonth()+1) +'/' +lmayor[i].fecha.getFullYear() %></strong>
-            </td>
-    
-    
-                <%if(lmayor[i].cuenta[j].debe=="debe"){%>
-                    <td style="width: 25%"><strong><%= lmayor[i].cuenta[j].importe %></strong></td>
-                <%}else {%>
-                    <td style="width: 25%"><strong></strong></td>
-                <%}%>
 
-                <%if(lmayor[i].cuenta[j].haber=="haber"){%>
-                    <td style="width: 25%"><strong><%= lmayor[i].cuenta[j].importe%></strong></td>
-                <%} else{%>
-                    <td style="width: 25%"><strong></strong></td>
-                <%}%>
 
-                <%if(lmayor[i].cuenta[j].debe=="debe"){%>
-                    <%if(lmayor[i].cuenta[j].tipo=="ACTIVO"){%>
-                        <td style="width: 25%"><strong><%= parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %></strong></td>
-                        <%  saldoSum = parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %>
-                    <% } else{%> 
-                        <td style="width: 25%"><strong><%= saldoSum - lmayor[i].cuenta[j].importe %></strong></td>
-                        <%  saldoSum = parseInt(saldoSum) - parseInt(lmayor[i].cuenta[j].importe) %>
+                <%if(lmayor[i].cuenta[j].nombre==count_name){%>
+
+                    
+                    <td><%= lmayor[i].numero_asiento %></td>
+                    <td><strong><%=  lmayor[i].fecha.getDate() + '/'+(lmayor[i].fecha.getMonth()+1) +'/' +lmayor[i].fecha.getFullYear() %></strong></td>
+                    
+                    <%if(lmayor[i].cuenta[j].debe=="debe"){%>
+                        <td style="width: 25%"><strong><%= lmayor[i].cuenta[j].importe %></strong></td>
+                    <%}else {%>
+                        <td style="width: 25%"><strong></strong></td>
+                    <%}%>
+
+                    <%if(lmayor[i].cuenta[j].haber=="haber"){%>
+                        <td style="width: 25%"><strong><%= lmayor[i].cuenta[j].importe%></strong></td>
+                    <%} else{%>
+                        <td style="width: 25%"><strong></strong></td>
+                    <%}%>
+
+
+                    <%if(lmayor[i].cuenta[j].debe=="debe"){%>
+
+                        <%if(lmayor[i].cuenta[j].tipo=="ACTIVO"){%>
+                            <td style="width: 25%"><strong><%= parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %></strong></td>
+                            <%  saldoSum = parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %>
+                        <% } else{%> 
+                            <td style="width: 25%"><strong><%= saldoSum - lmayor[i].cuenta[j].importe %></strong></td>
+                            <%  saldoSum = parseInt(saldoSum) - parseInt(lmayor[i].cuenta[j].importe) %>
+                        <% } %>
+
                     <% } %>
-                <% } %>
-                <%if(lmayor[i].cuenta[j].haber=="haber"){%>
-                    <%if(lmayor[i].cuenta[j].tipo=="ACTIVO"){%>
-                        <td style="width: 25%"><strong><%= saldoSum - lmayor[i].cuenta[j].importe %></strong></td>
-                        <%  saldoSum = parseInt(saldoSum) - parseInt(lmayor[i].cuenta[j].importe) %>
-                    <% } else{%>
-                        <td style="width: 25%"><strong><%= parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %></strong></td>
-                        <%  saldoSum = parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %>
-                    <% } %>
-                <% } %>               
-            <% } %>   
+
+
+                    <%if(lmayor[i].cuenta[j].haber=="haber"){%>
+
+                        <%if(lmayor[i].cuenta[j].tipo=="ACTIVO"){%>
+                            <td style="width: 25%"><strong><%= saldoSum - lmayor[i].cuenta[j].importe %></strong></td>
+                            <%  saldoSum = parseInt(saldoSum) - parseInt(lmayor[i].cuenta[j].importe) %>
+                        <% } else{%>
+                            <td style="width: 25%"><strong><%= parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %></strong></td>
+                            <%  saldoSum = parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %>
+                        <% } %>
+
+                    <% } %>   
+                    
+                    
+                <% } %>   
             </tr>
             <% } %>
         <% } %>
     </tbody>
     </table>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <% include partials/_footer%>
