--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -5,18 +5,22 @@
     <meta charset="utf-8">
     <title>Sistema Contable</title>
 
-    <style>#checkboxes {
-  display: none;
-  border: 1px #dadada solid;
-}
+    <style>
+    
+    #checkboxes {
+        display: none;
+        border: 1px #dadada solid;
+    }
 
-#checkboxes label {
-  display: block;
-}
+    #checkboxes label {
+        display: block;
+    }
 
-#checkboxes label:hover {
-  background-color: #1e90ff;
-}</style>
+    #checkboxes label:hover {
+        background-color: #1e90ff;
+    }
+    </style>
+    
 </head>
 
 <body>
