update functionality add or subtract according to account type

--- a/src/views/addCount.ejs
+++ b/src/views/addCount.ejs
@@ -3,7 +3,7 @@
 <div>
     <a href="/addCount">Crear Cuenta</a>
     <a href="/crear-asiento">Crear Asiento</a>
-    <a href="/ver-libros">Ver Libros</a>
+    <a href="/libro-mayor">Libro mayor</a>
 </div>
 
 <form action="/addCount" method="post">
