--- a/src/views/libro-mayor-ctas.ejs
+++ b/src/views/libro-mayor-ctas.ejs
@@ -1,4 +1,9 @@
 <% include partials/_header %>
+<div>
+    <a href="/addCount">Crear Cuenta</a>
+    <a href="/crear-asiento">Crear Asiento</a>
+    <a href="/libro-mayor">Libro mayor</a>
+</div>
 
 <table border="1">
     <thead>
@@ -71,6 +76,8 @@
         <% } %>
     </tbody>
     </table>
+
+<a href="/libro-mayor">Elegir otra cuenta</a>
 
 
 <% include partials/_footer%>
