update libro mayor

--- a/src/views/libro-mayor-ctas.ejs
+++ b/src/views/libro-mayor-ctas.ejs
@@ -4,7 +4,7 @@
     <a href="/crear-asiento">Crear Asiento</a>
     <a href="/libro-mayor">Libro mayor</a>
 </div>
-
+<h2><%= count_name %></h2>
 <table border="1">
     <thead>
         <tr>
